--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "@mantine/core": "4.2.8",
     "@mantine/hooks": "4.2.8",
     "@mantine/next": "4.2.8",
-    "next": "12.1.7-canary.33",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "12.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-error-boundary": "3.1.4"
   },
   "devDependencies": {
-    "@types/node": "17.0.41",
-    "@types/react": "18.0.12",
-    "autoprefixer": "10.4.7",
-    "concurrently": "7.2.1",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "@types/node": "18.6.4",
+    "@types/react": "18.0.17",
+    "autoprefixer": "10.4.8",
+    "concurrently": "7.3.0",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.4",
     "eslint-config-prettier": "8.5.0",
     "pathpida": "0.18.1",
-    "postcss": "8.4.14",
-    "prettier": "2.6.2",
-    "prettier-plugin-tailwindcss": "0.1.11",
-    "tailwindcss": "3.1.1",
-    "typescript": "4.7.3"
+    "postcss": "8.4.16",
+    "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "0.1.13",
+    "tailwindcss": "3.1.8",
+    "typescript": "4.7.4"
   },
   "postcss": {
     "plugins": {
