--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "4.2.8",
     "@mantine/hooks": "4.2.8",
     "@mantine/next": "4.2.8",
+    "@tabler/icons": "^1.82.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
