--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/hooks": "4.2.8",
     "@mantine/next": "4.2.8",
     "@tabler/icons": "^1.82.0",
+    "dayjs": "^1.11.5",
     "microcms-js-sdk": "^2.2.1",
     "next": "12.2.4",
     "react": "18.2.0",
