--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "3.1.4"
+    "react-error-boundary": "3.1.4",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
