--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-error-boundary": "3.1.4",
     "react-icons": "^4.4.0",
     "react-infinite-scroll-hook": "^4.0.3",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "twitter-api-sdk": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
