--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@mantine/core": "4.2.8",
     "@mantine/hooks": "4.2.8",
     "@mantine/next": "4.2.8",
+    "@octokit/graphql-schema": "^12.7.1",
     "@tabler/icons": "^1.82.0",
     "dayjs": "^1.11.5",
     "microcms-js-sdk": "^2.2.1",
     "next": "12.2.4",
+    "octokit": "^2.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "3.1.4",
